crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__evaluation__I119-basic-string-literals.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/evaluation/I119-basic-string-literals
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello world 1\n" [Continue]
> "Hello world 2.\n" [Done]
outcome: Done
