crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__evaluation__I120-evaluating-ink-functions-from-game.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/evaluation/I120-evaluating-ink-functions-from-game
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "Top level content\n" [Choices: "choice" (0) -> 0]
> "choice\n" [Done]
outcome: Done
