crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__evaluation__I122-evaluation-stack-leaks.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/evaluation/I122-evaluation-stack-leaks
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "else\n" [Continue]
> "else\n" [Continue]
> "hi\n" [Done]
outcome: Done
