crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__evaluation__I123-factorial-by-reference.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/evaluation/I123-factorial-by-reference
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "120\n" [Done]
outcome: Done
