crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__evaluation__I124-evaluating-ink-functions-from-game-2.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/evaluation/I124-evaluating-ink-functions-from-game-2
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "One\n" [Continue]
> "Two\n" [Continue]
> "Three\n" [Done]
outcome: Done
