crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__evaluation__I126-evaluating-function-variable-state-bug.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/evaluation/I126-evaluating-function-variable-state-bug
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Start\n" [Continue]
> "In tunnel.\n" [Continue]
> "End\n" [Ended]
outcome: Ended
