crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__evaluation__call-stack-evaluation.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/evaluation/call-stack-evaluation
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "8\n" [Ended]
outcome: Ended
